Provisional minimal CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,67 +1,69 @@
 # cmake file for building PandoraSDK
 #-------------------------------------------------------------------------------------------------------------------------------------------
-cmake_minimum_required(VERSION 2.8.2 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
 if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
     message(FATAL_ERROR "PandoraSDK requires an out-of-source build.")
 endif()
 
-# project name
-project(PandoraSDK)
+set(PandoraSDK_VERSION 03.04.01)
 
-# project version
-set(${PROJECT_NAME}_VERSION_MAJOR 03)
-set(${PROJECT_NAME}_VERSION_MINOR 04)
-set(${PROJECT_NAME}_VERSION_PATCH 01)
-set(${PROJECT_NAME}_VERSION "${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH}")
+project(PandoraSDK VERSION ${PandoraSDK_VERSION} LANGUAGES CXX)
 
-#-------------------------------------------------------------------------------------------------------------------------------------------
-# Dependencies
 include(PandoraCMakeSettings)
-
-# Prefer local include directory to any paths to installed header files
-include_directories(include)
-
-#-------------------------------------------------------------------------------------------------------------------------------------------
-# Low level settings - compiler etc
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -pedantic -Wno-long-long -Wno-sign-compare -Wshadow -fno-strict-aliasing -std=c++17 ${CMAKE_CXX_FLAGS}")
-
-include(CheckCXXCompilerFlag)
-unset(COMPILER_SUPPORTS_CXX_FLAGS CACHE)
-CHECK_CXX_COMPILER_FLAG(${CMAKE_CXX_FLAGS} COMPILER_SUPPORTS_CXX_FLAGS)
-
-if(NOT COMPILER_SUPPORTS_CXX_FLAGS)
-    message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} does not support cxx flags ${CMAKE_CXX_FLAGS}")
-endif()
-
-#-------------------------------------------------------------------------------------------------------------------------------------------
-# Build products
 
 # - Collect sources - not ideal because you have to keep running CMake to pick up changes
 file(GLOB_RECURSE PANDORA_SDK_SRCS RELATIVE ${PROJECT_SOURCE_DIR} "src/*.cc")
 
-# - Add library and properties
-add_library(${PROJECT_NAME} SHARED ${PANDORA_SDK_SRCS})
-set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${${PROJECT_NAME}_VERSION} SOVERSION ${${PROJECT_NAME}_SOVERSION})
+add_library(PandoraSDK SHARED ${PANDORA_SDK_SRCS})
 
-# - Optional documents
-option(PandoraSDK_BUILD_DOCS "Build documentation for ${PROJECT_NAME}" OFF)
-if(PandoraSDK_BUILD_DOCS)
-    add_subdirectory(doc)
+target_include_directories(PandoraSDK
+    PUBLIC include
+    PRIVATE src
+)
+
+target_compile_definitions(PandoraSDK
+    PRIVATE SRC_DIR=${PROJECT_SOURCE_DIR}/src
+)
+if(CMAKE_COMPILER_IS_GNUCXX)
+target_compile_options(PandoraSDK
+    PUBLIC -fno-elide-constructors
+)
 endif()
 
-#-------------------------------------------------------------------------------------------------------------------------------------------
-# Install products
+target_compile_features(PandoraSDK
+    PUBLIC
+        cxx_auto_type
+        cxx_range_for
+    PRIVATE
+        cxx_variadic_templates
+)
 
-# - library
-install(TARGETS ${PROJECT_NAME} DESTINATION lib COMPONENT Runtime)
+install(TARGETS PandoraSDK DESTINATION ${PROJECT_SOURCE_DIR}/lib COMPONENT Runtime)
+install(DIRECTORY include/ DESTINATION ${PROJECT_SOURCE_DIR}/include COMPONENT Development FILES_MATCHING PATTERN "*.h")
 
-# - headers
-install(DIRECTORY include/ DESTINATION include COMPONENT Development FILES_MATCHING PATTERN "*.h")
+if( EXISTS "${PROJECT_SOURCE_DIR}/cmake/PandoraSDKConfig.cmake.in" )
+    configure_file(
+        "${PROJECT_SOURCE_DIR}/cmake/PandoraSDKConfig.cmake.in"
+        "${PROJECT_BINARY_DIR}/PandoraSDKConfig.cmake" @ONLY
+    )
+    install(FILES "${PROJECT_BINARY_DIR}/PandoraSDKConfig.cmake" DESTINATION .)
+endif()
 
-# - support files
-PANDORA_GENERATE_PACKAGE_CONFIGURATION_FILES(${PROJECT_NAME}Config.cmake ${PROJECT_NAME}ConfigVersion.cmake ${PROJECT_NAME}LibDeps.cmake)
+if( EXISTS "${PROJECT_SOURCE_DIR}/cmake/PandoraSDKConfigVersion.cmake.in" )
+    configure_file(
+        "${PROJECT_SOURCE_DIR}/cmake/PandoraSDKConfigVersion.cmake.in"
+        "${PROJECT_BINARY_DIR}/PandoraSDKConfigVersion.cmake" @ONLY
+    )
+    install(FILES "${PROJECT_BINARY_DIR}//PandoraSDKConfigVersion.cmake" DESTINATION .)
+endif()
 
-#-------------------------------------------------------------------------------------------------------------------------------------------
-# display some variables and write them to cache
-PANDORA_DISPLAY_STD_VARIABLES()
+if( EXISTS "${PROJECT_SOURCE_DIR}/cmake/PandoraSDKLibDeps.cmake.in" )
+    configure_file(
+        "${PROJECT_SOURCE_DIR}/cmake/PandoraSDKLibDeps.cmake.in"
+        "${PROJECT_BINARY_DIR}/PandoraSDKLibDeps.cmake" @ONLY
+    )
+    #EXPORT_LIBRARY_DEPENDENCIES( "PandoraSDKLibDeps.cmake" )
+    install(FILES "${PROJECT_BINARY_DIR}/PandoraSDKLibDeps.cmake" DESTINATION lib/cmake)
+endif()
+
