--- a/cmake/PandoraSDKConfigVersion.cmake.in
+++ b/cmake/PandoraSDKConfigVersion.cmake.in
@@ -1,15 +1,11 @@
-##############################################################################
-# this file is parsed when FIND_PACKAGE is called with version argument
-#
-# @author Jan Engels, Desy IT
-##############################################################################
+set(PACKAGE_VERSION "@PandoraSDK_VERSION@" )
 
-
-SET( ${PACKAGE_FIND_NAME}_VERSION_MAJOR @PandoraSDK_VERSION_MAJOR@ )
-SET( ${PACKAGE_FIND_NAME}_VERSION_MINOR @PandoraSDK_VERSION_MINOR@ )
-SET( ${PACKAGE_FIND_NAME}_VERSION_PATCH @PandoraSDK_VERSION_PATCH@ )
-
-
-INCLUDE( "@PANDORA_CMAKE_MODULES_PATH@/MacroCheckPackageVersion.cmake" )
-CHECK_PACKAGE_VERSION( ${PACKAGE_FIND_NAME} @PandoraSDK_VERSION@ )
+if("${PACKAGE_VERSION}" VERSION_LESS "${PACKAGE_FIND_VERSION}")
+    set(PACKAGE_VERSION_COMPATIBLE FALSE)
+else()
+    set(PACKAGE_VERSION_COMPATIBLE TRUE)
+    if ("${PACKAGE_VERSION}" VERSION_EQUAL "${PACKAGE_FIND_VERSION}")
+        set(PACKAGE_VERSION_EXACT TRUE)
+    endif()
+endif()
 
